--- a/src/Styles/CustomerPageStyles/Home.css
+++ b/src/Styles/CustomerPageStyles/Home.css
@@ -26,6 +26,10 @@ h1{
   
 }
 
+.card-row{
+  border-radius: 20px;
+}
+
 .card{
   width:80%;
   height: 500px;
@@ -40,6 +44,8 @@ h1{
 
 .card:hover {
   transform: scale(1.05);
+  border-radius: 30px;
+  transition: 0.3s ease;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3); 
   
 }
