--- a/src/Styles/CustomerPageStyles/Home.css
+++ b/src/Styles/CustomerPageStyles/Home.css
@@ -12,6 +12,7 @@ h1{
 .Carousel{
 
   border-radius: 10px;
+  max-width: 1000px;
 
 }
 
@@ -21,23 +22,20 @@ h1{
  
 }
 .cardimg{
-  height:350px;
-  padding: 10px;
+
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
   
 }
 
-.card-row{
-  border-radius: 20px;
-}
-
 .card{
-  width:80%;
-  height: 500px;
-  /* margin: 50px; */
+ width: 90%;
+  max-width: 500px;
+  height: 600px;
   margin-top: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;overflow: hidden;
+   overflow: hidden;
+  border-radius: 20px;
 
 }
 
@@ -50,17 +48,6 @@ h1{
   
 }
 
-.card::before {
-  
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.111);
-  opacity: 0; 
-  transition: opacity 0.3s ease;
-}
 
 .card:hover::before {
   opacity: 1; 
@@ -68,21 +55,59 @@ h1{
 
 .card-content{
 padding: 20px;
+position: absolute;
+bottom: 0;
+
 }
+.card-content h3{
+font-size: 30px;
+
+}
+.card-content p{
+  font-size: 20px;
+  
+  }
+
+
+
+
+  
+
 
 .card-row{
   margin-top: 50px;
   width: 70%;
+
   margin: 0 auto;
   padding: 30px;
   display: flex;
-
+  justify-content: space-evenly;
   margin-top: 100px;
   margin-bottom: 100px;
+  border-radius: 30px;
 
+
+}
+
+.card-container{
+display: flex;
+align-items: center;
+justify-content: center;
 
 }
 
 
 
+.cardImage{
+  margin-top: 50px;
+}
 
+
+/* 
+@media only screen and (max-width:1600px){
+  .card-container{
+    display: block;
+    
+    }
+ 
+} */
