--- a/src/Styles/CustomerPageStyles/Profile.css
+++ b/src/Styles/CustomerPageStyles/Profile.css
@@ -9,7 +9,12 @@
     margin: 0 auto;
     margin-top: 100px;
     margin-bottom: 100px;
-width: 90%;
+width: 80%;
+padding: 100px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+justify-self: center;
 
 }
 
@@ -26,5 +31,35 @@ width: 90%;
     font-size: 50px;
     font-weight: 600;
 }
+
+.profileInput{
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.profileLabel{
+    font-size: 23px;
+    font-weight: 800;
+
+}
+
+.profileSubmit{
+    color: rgb(245, 241, 241);
+    font-weight: 700;
+    background-color: rgb(17, 148, 12);
+
+}
+.profileSubmit:hover{
+    color: rgb(9, 9, 9);
+    background-color: rgb(21, 194, 15);
+    font-size: 25px;
+    font-weight: 700;
+    transition: all 0.3s ease-in;
+
+}
+
+
+
 
 
