--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -8,14 +8,14 @@
     flex-direction: column;
     padding-top: 10px;
 
-  
+  /* margin-top: auto; */
   }
   
   .socialMedia svg {
     color: white;
    
     font-size: 70px;
-    margin: 0 70px 10px 0;
+    margin: 0 70px 10px 20px;
     cursor: pointer;
   }
   
